--- a/src/components/StarWarsLoader/StarWarsLoader.module.css
+++ b/src/components/StarWarsLoader/StarWarsLoader.module.css
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px; /* Adjust the height as needed */
+  height: 100px;
 }
 
 .star-wars-loader__spinner {
-  width: 30px; /* Adjust the size of the spinner */
-  height: 30px; /* Adjust the size of the spinner */
+  width: 30px;
+  height: 30px;
   border: 3px solid #fff;
   border-radius: 50%;
   border-top: 3px solid transparent;
